--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Link Share</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+  <link rel="icon" href="/img/cloud-computing.png" type="image/x-icon" />
 </head>
 
 <body>
