--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-
+  <img onclick="window.open('https://github.com/jatinvats636')" id="userPhoto" src="/img/cloud-computing.png"
+    alt="User Photo">
 </body>
 
 </html>
