--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <img onclick="window.open('https://github.com/jatinvats636')" id="userPhoto" src="/img/cloud-computing.png"
     alt="User Photo">
+  <span id="userName">Jatin Vats</span>
 </body>
 
 </html>
