--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <img onclick="window.open('https://github.com/jatinvats636')" id="userPhoto" src="/img/cloud-computing.png"
     alt="User Photo">
   <span id="userName">Jatin Vats</span>
+
+  <script src="index.js"></script>
 </body>
 
 </html>
