--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <a class="link"
       href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/en-US/ProPlus2019Retail.img"
       target="_blank">Office2019 ProPlus</a>
+    <a class="link"
+      href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/en-US/ProPlusRetail.img"
+      target="_blank">Office2016 ProPlus</a>
     <a class="link" href="" target="_blank" download="" hidden>---</a>
   </div>
   <script src="index.js"></script>
