--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <img onclick="window.open('https://github.com/jatinvats636')" id="userPhoto" src="/img/cloud-computing.png"
     alt="User Photo">
   <span id="userName">Jatin Vats</span>
-
+  <div id="links"></div>
   <script src="index.js"></script>
 </body>
 
