--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <img onclick="window.open('https://github.com/jatinvats636')" id="userPhoto" src="/img/cloud-computing.png"
     alt="User Photo">
   <span id="userName">Jatin Vats</span>
-  <div id="links"></div>
+  <div id="links">
+    <a class="link" href="" target="_blank" download="" hidden>---</a>
+  </div>
   <script src="index.js"></script>
 </body>
 
