--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Link Share</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
   <link rel="icon" href="/img/cloud-computing.png" type="image/x-icon" />
 </head>
 
